[package]
name = "co2mon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
clap = { version = "4.0.13", features = ["cargo"] }
color-eyre = "0.6.2"
confy = "0.5.1"
hidapi = "2.1.2"
rand = "0.8.5"
rumqttc = "0.20.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.37"
tracing-subscriber = "0.3"

[package.metadata.cross.build]
pre-build = [ # additional commands to run prior to building the package
    "dpkg --add-architecture $CROSS_DEB_ARCH", 
    "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH"
]
